--- a/css/tableFilter.scss
+++ b/css/tableFilter.scss
@@ -12,7 +12,8 @@
         border: none!important;
     }
     #responsiveTable tr{
-        border: none!important;
+        border-top: none!important;
+        border-bottom: none!important;
         vertical-align: middle!important;
         padding: 10px;
     }
@@ -29,24 +30,21 @@
 }
 
 #responsiveTable{
+    border-radius: 10px!important;
+    overflow: auto!important;
     .table {
-        @media only screen and (min-width: 801px){
-            border-spacing: 1!important;
+        // @media only screen and (min-width: 801px){
+            border-spacing: 3!important;
             border-collapse: collapse!important;
             overflow: hidden;
             position: relative;
-        }
+        // }
         box-shadow: 0 0 25px rgba(#E0E0E0,0.9);
         margin-top: 20px;
         border-radius: 10px;
         background: white;
     }
 
-    .table * {
-        @media only screen and (min-width: 801px){
-            position: relative;
-        }
-    }
     .table td, .table th {
         @media only screen and (min-width: 801px){
             padding-left: 8px;
@@ -58,6 +56,19 @@
         }
         background: #fe6500;
     }
+
+    .table thead tr td:first-child {
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
+        border-left: 3px solid #fe6500;
+    }
+    
+    .table thead tr td:last-child {
+        border-top-right-radius: 20px;
+        border-bottom-right-radius: 20px;
+        border-right: 3px solid #fe6500;
+    }
+
     .table tbody tr {
         @media only screen and (min-width: 801px){
             height: 50px;
