new online page

--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -17,10 +17,10 @@
     <link href='https://fonts.gstatic.com' crossorigin rel='preconnect' />
 
     <link rel='stylesheet' id='timetable_font_lato-css'  href='//fonts.googleapis.com/css?family=Lato%3A400%2C700&#038;ver=5.2.2' type='text/css' media='all' />
-    <link rel='stylesheet' id='woocommerce-general-group-css' href='/css/style7.css?v=10' type='text/css' media='all' />
-    <link rel='stylesheet' href='/css/media.css?id=4' type='text/css' media='all' />
-    <link rel='stylesheet' href='/css/bootstrap-custom.min.css?id=4' type='text/css' media='all' />
-    <link rel='stylesheet' href='/css/schedule.css?id=4' type='text/css' media='all' />
+    <link rel='stylesheet' id='woocommerce-general-group-css' href='/CA/css/style7.css' type='text/css' media='all' />
+    <link rel='stylesheet' href='/CA/css/media.css?id=4' type='text/css' media='all' />
+    <link rel='stylesheet' href='/CA/css/bootstrap-custom.min.css?id=4' type='text/css' media='all' />
+    <link rel='stylesheet' href='/CA/css/schedule.css?id=4' type='text/css' media='all' />
     <link rel='stylesheet' id='google-font-open-sans-css'  href='//fonts.googleapis.com/css?family=Open+Sans%3A300%2C300italic%2Cregular%2Citalic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic&#038;subset=cyrillic-ext%2Ccyrillic%2Cvietnamese%2Cgreek-ext%2Clatin%2Cgreek%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
     <link rel='stylesheet' id='google-font-dosis-css'  href='//fonts.googleapis.com/css?family=Dosis%3A200%2C300%2Cregular%2C500%2C600%2C700%2C800&#038;subset=latin%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
     <link rel='stylesheet' id='google-font-lato-css'  href='//fonts.googleapis.com/css?family=Lato%3A100%2C100italic%2C300%2C300italic%2Cregular%2Citalic%2C700%2C700italic%2C900%2C900italic&#038;subset=latin%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
@@ -31,9 +31,9 @@
 
 
     <!--n2css-->
-    <script type='text/javascript' src='/js/jquery.js'></script>
-    <script type='text/javascript' src='/js/jquery-migrate.min.js'></script>
-    <script type='text/javascript' src='/js/plugins10.js'></script>
+    <script type='text/javascript' src='/CA/js/jquery.js'></script>
+    <script type='text/javascript' src='/CA/js/jquery-migrate.min.js'></script>
+    <script type='text/javascript' src='/CA/js/plugins10.js'></script>
     <script src='/CA/css/tooltipster/js/tooltipster.bundle.js'></script>
 
     <script type='text/javascript'>
@@ -1349,11 +1349,11 @@
 <script type='text/javascript' src='/CA/js/plugins9.js'></script>
 <script type='text/javascript' src='/CA/js/theme.js'></script>
 
-    <script type='text/javascript' src='/CA/js/media.js?v=10?id=4'></script>
-    <script type='text/javascript' src='/CA/js/moment.min.js?id=4'></script>
-    <script type='text/javascript' src='/CA/js/moment-timezone-with-data-10-year-range.min.js?id=4'></script>
-    <script type='text/javascript' src='/CA/js/sweetalert2.9.js?id=4'></script>
-    <script type='text/javascript' src='/CA/js/schedule.js?id=4'></script>
+    <script type='text/javascript' src='/CA/js/media.js?v=10'></script>
+    <script type='text/javascript' src='/CA/js/moment.min.js'></script>
+    <script type='text/javascript' src='/CA/js/moment-timezone-with-data-10-year-range.min.js'></script>
+    <script type='text/javascript' src='/CA/js/sweetalert2.9.js'></script>
+    <script type='text/javascript' src='/CA/js/schedule.js'></script>
 <!-- Code injected by live-server -->
 <script type="text/javascript">
 	// <![CDATA[  <-- For SVG support
