new online page

--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -82,7 +82,7 @@
         <div class="pb-logo">
 
             <a href="/" title="CodeAdvantage ">
-                <img src="/CA/images/logor.png" alt="CodeAdvantage "/>
+                <img src="/CA/CA/images/logor.png" alt="CodeAdvantage "/>
             </a>
 
         </div>
@@ -532,7 +532,7 @@
 
                         <div class="classesBlocks mb-middle">
                             <div class="imgWithCaptionBlock">
-                                <img src="/uploads/scratchjr-450x450.png" alt="Scratch Jr"/>
+                                <img src="/CA/uploads/scratchjr-450x450.png" alt="Scratch Jr"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/online/scratch-jr" target="_blank">Scratch Jr</a>
                                     <p>Grades K-2nd</p>
@@ -540,7 +540,7 @@
                             </div>
 
                             <div class="imgWithCaptionBlock">
-                                <img src="/uploads/kodu-450-1.jpg" alt="3D Game Design"/>
+                                <img src="/CA/uploads/kodu-450-1.jpg" alt="3D Game Design"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/online/intro-to-coding" target="_blank"> 3D Game Design </a>
                                     <p>Grades 1st-3rd</p>
@@ -548,7 +548,7 @@
                             </div>
 
                             <div class="imgWithCaptionBlock">
-                                <img src="/uploads/roblox01.png" alt="Roblox Build"/>
+                                <img src="/CA/uploads/roblox01.png" alt="Roblox Build"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/online/roblox-build" target="_blank">Roblox Build</a>
                                     <p>Grades 1st-3rd</p>
@@ -556,7 +556,7 @@
                             </div>
     
                             <div class="imgWithCaptionBlock">
-                                <img src="/uploads/minecraft-450-1.jpg" alt="Minecraft Club"/>
+                                <img src="/CA/uploads/minecraft-450-1.jpg" alt="Minecraft Club"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/online/minecraft-club" target="_blank">Minecraft Club</a>
                                     <p>Grades 1st-3rd</p>
@@ -568,7 +568,7 @@
 
                         <div class="classesBlocks mb-middle">
                             <div class="imgWithCaptionBlock">
-                                <img src="/uploads/kodu-450-1.jpg" alt="3D Game Design"/>
+                                <img src="/CA/uploads/kodu-450-1.jpg" alt="3D Game Design"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/online/intro-to-coding" target="_blank"> 3D Game Design </a>
                                     <p>Grades 1st-3rd</p>
@@ -576,7 +576,7 @@
                             </div>
 
                             <div class="imgWithCaptionBlock">
-                                <img src="/uploads/scratch-1.png" alt="Scratch"/>
+                                <img src="/CA/uploads/scratch-1.png" alt="Scratch"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/online/scratch-jr" target="_blank">Scratch</a>
                                     <p>Grades 3rd-5th</p>
@@ -584,7 +584,7 @@
                             </div>
 
                             <div class="imgWithCaptionBlock">
-                                <img src="/uploads/minecraft-450-1.jpg" alt="Minecraft Club"/>
+                                <img src="/CA/uploads/minecraft-450-1.jpg" alt="Minecraft Club"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/online/minecraft-club" target="_blank">Minecraft Club</a>
                                     <p>Grades 1st-3rd</p>
@@ -592,7 +592,7 @@
                             </div>
     
                             <div class="imgWithCaptionBlock">
-                                <img src="/uploads/minecraft-java-mods-585.jpg" alt="Minecraft Java Mods"/>
+                                <img src="/CA/uploads/minecraft-java-mods-585.jpg" alt="Minecraft Java Mods"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/online/minecraft-java-mods" target="_blank">Minecraft Java Mods </a>
                                     <p>Grades 3rd-5th</p>
@@ -600,7 +600,7 @@
                             </div>
 
                             <div class="imgWithCaptionBlock">
-                                <img src="/uploads/roblox03.png" alt="Roblox Code"/>
+                                <img src="/CA/uploads/roblox03.png" alt="Roblox Code"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/online/roblox-code" target="_blank">Roblox Code</a>
                                     <p>Grades 3rd-5th</p>
@@ -610,7 +610,7 @@
                         <h4 class="h4">Classes for 5th-8th+ graders</h4>
                         <div class="classesBlocks">
                             <div class="imgWithCaptionBlock">
-                                <img src="/uploads/pygame-450-2.jpg" alt="Python"/>
+                                <img src="/CA/uploads/pygame-450-2.jpg" alt="Python"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/online/advanced-coding" target="_blank">Python</a>
                                     <p>Grades 5th-10th+</p>
@@ -618,7 +618,7 @@
                             </div>
 
                             <div class="imgWithCaptionBlock">
-                                <img src="/uploads/web-dis.jpg" alt="Web Development"/>
+                                <img src="/CA/uploads/web-dis.jpg" alt="Web Development"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/online/web-development" target="_blank">Web Development</a>
                                     <p>Grades 5th-10th+</p>
@@ -626,7 +626,7 @@
                             </div>
     
                             <div class="imgWithCaptionBlock">
-                                <img src="/uploads/minecraft-modding-java-585x585.png" alt="Minecraft Modding: Java"/>
+                                <img src="/CA/uploads/minecraft-modding-java-585x585.png" alt="Minecraft Modding: Java"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/online/minecraft-java-mods" target="_blank">Minecraft Modding: Java</a>
                                     <p>Grades 5rd-8th</p>
@@ -634,7 +634,7 @@
                             </div>
 
                             <div class="imgWithCaptionBlock">
-                                <img src="/uploads/scratch-450x450.png" alt="Scratch"/>
+                                <img src="/CA/uploads/scratch-450x450.png" alt="Scratch"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/online/scratch-jr" target="_blank">Scratch</a>
                                     <p>Grades 3rd-5th</p>
@@ -642,7 +642,7 @@
                             </div>
 
                             <div class="imgWithCaptionBlock">
-                                <img src="/uploads/roblox02.png" alt="Roblox Code"/>
+                                <img src="/CA/uploads/roblox02.png" alt="Roblox Code"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/online/roblox-code" target="_blank">Roblox Code</a>
                                     <p>Grades 3rd-5th</p>
@@ -1086,7 +1086,7 @@
                         <h3 class="h4 orangeText mb-middle">Our Principal</h3>
                         <div class="textWithImgBlock mb-middle">
                             <div class="imgWithCaptionBlock">
-                                <img src="/uploads/scratchjr-450x450.png" alt="Scratch Jr"/>
+                                <img src="/CA/uploads/scratchjr-450x450.png" alt="Scratch Jr"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/online/scratch-jr" target="_blank">Scratch Jr</a>
                                     <p>Grades K-2nd</p>
@@ -1171,7 +1171,7 @@
                             </div>
                             <div>
                                 <a href="https://www.instagram.com/codeadvantage" title="CodeAdvantage on Instagram" target="_blank">
-                                    <img src="/uploads/inst_200x200.png" alt="instagram">
+                                    <img src="/CA/uploads/inst_200x200.png" alt="instagram">
                                 </a>
                             </div>
                         </div>
