--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -488,7 +488,7 @@
         <section>  
             <div class="container">
                 <div class="rows">
-                    <img class="size-medium wp-image-2206 aligncenter divider" src="/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
+                    <img class="size-medium wp-image-2206 aligncenter divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
                 </div>
                 <div class="rows">
                     <article>
@@ -498,22 +498,22 @@
 
                         <div class="pressBlock">
                             <a href="" target="_blank">
-                                <img class="alignnone size-medium wp-image-2130" src="/uploads/ColumbiaUniversity-1-150x300.png" alt="Columbia University" width="200" height="100" />
+                                <img class="alignnone size-medium wp-image-2130" src="/CA/uploads/ColumbiaUniversity-1-150x300.png" alt="Columbia University" width="200" height="100" />
                             </a>
                             <a href="" target="_blank">
-                                <img class="alignnone size-medium wp-image-2137" src="/uploads/Times-Out-1-300x300.png" alt="Time Out New York" width="100" height="100" />
+                                <img class="alignnone size-medium wp-image-2137" src="/CA/uploads/Times-Out-1-300x300.png" alt="Time Out New York" width="100" height="100" />
                             </a>
                             <a href="" target="_blank">
-                                <img class="alignnone size-medium wp-image-2136" src="/uploads/PBS-300x300.jpg" alt="Public Broadcasting Service" width="100" height="100" />
+                                <img class="alignnone size-medium wp-image-2136" src="/CA//uploads/PBS-300x300.jpg" alt="Public Broadcasting Service" width="100" height="100" />
                             </a>
                             <a href="" target="_blank">
-                                <img class="alignnone size-medium wp-image-2133" src="/uploads/Mommy-Poppins-300x300.jpg" alt="Mommy Poppins New Jersey" width="100" height="100"  />
+                                <img class="alignnone size-medium wp-image-2133" src="/CA//uploads/Mommy-Poppins-300x300.jpg" alt="Mommy Poppins New Jersey" width="100" height="100"  />
                             </a>
                         </div>
                     </article>
                 </div>
                 <div class="rows">
-                    <img class="size-medium wp-image-2206 aligncenter divider" src="/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
+                    <img class="size-medium wp-image-2206 aligncenter divider" src="/CA//uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
                 </div>
             </div>
         </section>
@@ -671,7 +671,7 @@
         <section>
             <div class="container">
                 <div class="rows">
-                    <img class="size-medium wp-image-2206 divider" src="/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
+                    <img class="size-medium wp-image-2206 divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
                 </div>
                 <div class="rows">
                     <article>
@@ -1074,7 +1074,7 @@
                 </div>
 
                 <div class="rows">
-                    <img class="size-medium wp-image-2206 divider " src="/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
+                    <img class="size-medium wp-image-2206 divider " src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
                 </div>
             </div>
         </section>
@@ -1153,7 +1153,7 @@
                     </article>
                 </div>
                 <div class="rows">
-                    <img class="size-medium wp-image-2206 divider" src="/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
+                    <img class="size-medium wp-image-2206 divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
                 </div>
             </div>
         </section>
@@ -1166,7 +1166,7 @@
                         <div class="socLinksBlock">
                             <div>
                                 <a href="https://www.facebook.com/codeadvantage.org" title="CodeAdvantage on Facebook" target="_blank">
-                                    <img  alt="facebook" src="/uploads/facebook.png">
+                                    <img  alt="facebook" src="/CA/uploads/facebook.png">
                                 </a>
                             </div>
                             <div>
